# agent-ops

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  pyrightconfig.json  registry.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.kittify/: metadata.yaml
.zed/: settings.json
commands/: end-agent-session.md  find-agent.md  init-adhd.md  load-agent.md  publish-package.md
docs/: secrets-rotation-cron.md
hooks/: hooks.json  post-deploy-secrets-verify.sh  pre-deploy-secrets-sync.sh
output-styles/: adhd.md
scripts/: accessibility-config.py  auto-tag.py  changelog-guard.py  commit_guard.py  config-tamper-guard.py  elicitation-gate.py  format_files.py  frontmatter_config.py  instructions-guard.py  postcompact-recovery.py  stop-failure-audit.py  summon.py  teammate-gate.py  test-coverage-guard.py  version_guard.py  worktree_lifecycle.py
strategy/: nexus-strategy.md
tests/: conftest.py  test_auto_tag.py  test_changelog_guard.py  test_commit_guard.py  test_config_tamper_guard.py  test_elicitation_gate.py  test_frontmatter_config.py  test_instructions_guard.py  test_postcompact_recovery.py  test_shared_audit.py  test_shared_changelog.py  test_shared_dotted.py  test_shared_encoding.py  test_shared_git_ops.py  test_shared_hook_payload.py  test_shared_paths.py  test_stop_failure_audit.py  test_summon.py  test_teammate_gate.py  test_test_coverage_guard.py  test_version_bump.py  test_version_guard.py  test_worktree_lifecycle.py
tools/: add_coordination_tools.py  version_bump.py
(+262 files in other folders)
